# final_proyect_as

./: CMakeLists.txt  README.md  package.xml
BTs/: juego_sin_hablar.xml  prueba.xml
bt_nav/behavior_tree_xml/: navigate.xml
bt_nav/include/bt_nav/: GetWaypoint.hpp
bt_nav/src/: bt_nav_main.cpp
bt_nav/src/bt_nav/: GetWaypoint.cpp  Move.cpp
bt_yolo/BTs/: juego_sin_hablar.xml  navegar.xml
bt_yolo/include/bt_yolo/: DetectPersonNode.hpp
bt_yolo/launch/: detect_person.launch.py
bt_yolo/maps/: mapa_escondites.pgm  mapa_escondites.yaml
bt_yolo/src/: detectPerson_main.cpp
bt_yolo/src/bt_yolo/: DetectPersonNode.cpp
camera/: CMakeLists.txt  package.xml
camera/config/: params.yaml
camera/include/camera/: DetectionTo3DfromDepthNode.hpp  DetectionTo3DfromPCNode.hpp
camera/launch/: camera.launch.py
camera/src/camera/: DetectionTo3DfromDepthNode.cpp  DetectionTo3DfromPCNode.cpp  HSVFilterNode.cpp  YoloDetectionNode.cpp
final_proyect_as/: CMakeLists.txt  README.md  package.xml
final_proyect_as/BTs/: escondite.xml  juego.xml  juego_sin_hablar.xml
final_proyect_as/camera/include/camera/: HSVFilterNode.hpp
final_proyect_as/camera/launch/: detection3d_hsv.launch.py
final_proyect_as/camera/src/camera/: HSVFilterNode.cpp
final_proyect_as/final_proyect_as/include/bt_nav/: RandomWP.hpp
final_proyect_as/final_proyect_as/src/final_proyect_as/: DetectPersonNode.cpp  FinishNode.cpp  RandomWP.cpp  RequestPlayersNode.cpp
final_proyect_as/include/bt_nav/: RandomWP.hpp
final_proyect_as/include/bt_nav/ctrl_support/: BTActionNode.hpp
final_proyect_as/include/final_proyect_as/: DetectPersonNode.hpp  RequestPlayersNode.hpp  escondite.xml
final_proyect_as/launch/: detect_person.launch.py
final_proyect_as/maps/: mapa_escondites.pgm
final_proyect_as/src/: detectPerson_main.cpp
final_proyect_as/src/final_proyect_as/: DetectPersonNode.cpp  FinishNode.cpp  RandomWP.cpp  RequestPlayersNode.cpp
final_proyect_as/yolov8_ros/: requirements.txt
hri/: CMakeLists.txt  thirdparty.repos
hri/launch/: hri_dependencies.launch.py
include/bt_nav/: GetWaypoint.hpp  Move.hpp  RandomWP.hpp
include/ctrl_support/: BTActionNode.hpp
include/final_proyect_as/: DetectPersonNode.hpp  FinishNode.hpp  RequestPlayersNode.hpp
laser/include/laser/: ObstacleDetectorNode.hpp
laser/src/laser/: ObstacleDetectorNode.cpp
launch/: detect_person.launch.py
maps/: mapa_escondites.pgm
src/: bt_nav_main.cpp  detectPerson_main.cpp  main_bt.cpp
src/final_proyect_as/: DetectPersonNode.cpp  FinishNode.cpp  GetWaypoint.cpp  Move.cpp  RandomWP.cpp  RequestPlayersNode.cpp
yolov8_ros/yolo_bringup/launch/: yolov8.launch.py
