<?xml version="1.0"?>
<package format="3">
  <name>final_proyect_as</name>
  <version>0.0.1</version>
  <description>práctica final ASR</description>
  <maintainer email="ma.pina.2023@alumnos.urjc.es">miguelpina5</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>yolo_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>ament_index_cpp</depend>
  <depend>nav2_msgs</depend>
  <depend>rclcpp_action</depend>

  <exec_depend>camera</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
